--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fireboltcasters/<packageName>",
+  "name": "sso-oauth2-server",
   "version": "0.0.1",
-  "description": "<packageDescription>",
+  "description": "A simple package for a single sing-on (SSO) server",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
@@ -10,8 +10,8 @@
     "testOnly": "npm run coverage",
     "start": "npm run build && node ./build/ignoreCoverage/development.js",
     "_prepareBuild": "rm -rf ./build",
-    "build": "npm run _prepareBuild && rimraf ./build && tsc && cp package.json ./build && cp README.md ./build",
-    "dev": "nodemon",
+    "build": "npm run _prepareBuild && rimraf ./build && tsc && cp package.json ./build && cp README.md ./build && cp -r ./src/views ./build",
+    "dev": "nodemon -e ts  --exec \"npm run start\"",
     "_prepareUpload": "npm run build && rimraf ./coverage && rimraf ./build/tests",
     "_uploadBuild": "cd ./build && npm pack && npm publish && cd ..",
     "_uploadWithoutPatch": "npm run _prepareUpload && npm run _uploadBuild && npm run clean",
@@ -28,17 +28,12 @@
   "keywords": [
     "npm-template"
   ],
-  "author": "Steffen Droppelmann",
+  "author": "Nils Baumgartner",
   "contributors": [
     {
       "name": "Nils Baumgartner",
       "email": "nilsbaumgartner1994@gmail.com",
-      "url": "https://github.com/FireboltCasters"
-    },
-    {
-      "name": "Steffen Droppelmann",
-      "email": "steffen.droppelmann@gmail.com",
-      "url": "https://github.com/FireboltCasters"
+      "url": "https://github.com/NilsBaumgartner1994"
     }
   ],
   "license": "MIT",
@@ -58,6 +53,17 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.14.5"
+    "@babel/preset-typescript": "^7.14.5",
+    "hashids": "^1.2.2",
+    "express": "^4.17.1",
+    "@types/express": "^4.17.13",
+    "express-session": "^1.15.6",
+    "@types/express-session": "^1.17.4",
+    "@types/morgan": "^1.9.3",
+    "ejs-mate": "^3.0.0",
+    "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.0",
+    "studip-api": "^1.0.2",
+    "uuid": "^3.4.0"
   }
 }
