--- a/package.json
+++ b/package.json
@@ -54,13 +54,15 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.14.5",
-    "hashids": "^1.2.2",
-    "express": "^4.17.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "express-session": "^1.15.6",
     "@types/express-session": "^1.17.4",
     "@types/morgan": "^1.9.3",
+    "cors": "^2.8.5",
     "ejs-mate": "^3.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.15.6",
+    "hashids": "^1.2.2",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "studip-api": "^1.0.2",
